# Metodos-Numericos-1

./: .gitignore
metodo raizes/: main.cpp  rapidos.cpp  rapidos.hpp  robustos.cpp  robustos.hpp
tarefa1/: CMakeLists.txt  README.md  gabrigas_math.cpp  gabrigas_math.hpp  main.cpp
tarefa2/: CMakeLists.txt  README.md  bisseccao.cpp  bisseccao.hpp  falsaposicao.cpp  falsaposicao.hpp  main.cpp  newton.cpp  newton.hpp  pontofixo.cpp  pontofixo.hpp  rapidos.cpp  rapidos.hpp  robustos.cpp  robustos.hpp  secante.cpp  secante.hpp
